--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,6 @@
   display: flex;
   width: 50%;
   height: 100%;
-  background-color: yellow;
   border-radius: 20px;
 }
 .sale-product__container1 img {
@@ -224,8 +223,14 @@
   background: transparent;
   transition: all 0.3s ease;
 }
+.sale-product__container1-overlay button a {
+  text-decoration: none;
+  color: #000;
+}
 .sale-product__container1-overlay button:hover {
   background-color: #000000;
+}
+.sale-product__container1-overlay button:hover a {
   color: #fff;
   cursor: pointer;
 }
@@ -282,8 +287,14 @@
   background: transparent;
   transition: all 0.3s ease;
 }
+.sale-product__sub-container1-overlay button a {
+  text-decoration: none;
+  color: #000;
+}
 .sale-product__sub-container1-overlay button:hover {
   background-color: #000000;
+}
+.sale-product__sub-container1-overlay button:hover a {
   color: #fff;
   cursor: pointer;
 }
@@ -331,8 +342,11 @@
   border: 3px solid rgba(255, 255, 255, 0.4274509804);
   border-radius: 5px;
   background: transparent;
-  color: #fff;
   transition: all 0.3s ease;
+}
+.sale-product__sub-container2-overlay button a {
+  text-decoration: none;
+  color: #fff;
 }
 .sale-product__sub-container2-overlay button:hover {
   background-color: #000000;
@@ -402,8 +416,10 @@
   width: 100%;
   transition: all 0.5s ease;
 }
-.feature-product__card-title {
-  font-weight: 500;
+.feature-product__card-title a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 600;
 }
 .feature-product__card-price {
   display: flex;
@@ -684,6 +700,10 @@
 .products__listing--card-title {
   font-size: 16px;
 }
+.products__listing--card-title h4 a {
+  text-decoration: none;
+  color: #000;
+}
 .products__listing--card-rating p {
   font-size: 12px;
 }
@@ -746,6 +766,238 @@
   background-color: #f2ff00;
   color: #000;
   font-weight: 600;
+}
+
+.breadcrumb {
+  display: flex;
+  margin: 10px;
+}
+.breadcrumb ul {
+  display: flex;
+}
+.breadcrumb ul li {
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.5921568627);
+  list-style: none;
+}
+.breadcrumb ul li + li::before {
+  content: ">";
+  margin: 10px;
+}
+
+.product-detail {
+  display: flex;
+  width: 100%;
+  padding: 20px;
+}
+.product-detail__display {
+  width: 50%;
+}
+.product-detail__display img {
+  width: 100%;
+  height: 100%;
+}
+.product-detail__description {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 50%;
+}
+.product-detail__description-title h2 {
+  font-size: 20px;
+  font-weight: 500;
+}
+.product-detail__description-rating {
+  border-bottom: 1px solid rgba(183, 186, 252, 0.7176470588);
+}
+.product-detail__description-rating p {
+  color: rgba(0, 0, 0, 0.6352941176);
+}
+.product-detail__description-rating p i {
+  color: gold;
+}
+.product-detail__description-limited-deal p {
+  display: inline-block;
+  font-size: 12px;
+  font-weight: 500;
+  background-color: red;
+  color: #fff;
+  padding: 5px 10px;
+}
+.product-detail__description-price {
+  display: flex;
+  gap: 10px;
+  font-size: 25px;
+}
+.product-detail__description-price .original-price {
+  font-style: italic;
+  text-decoration: line-through;
+  color: rgba(0, 0, 0, 0.631372549);
+}
+.product-detail__description-price .selling-price {
+  font-weight: 600;
+}
+.product-detail__description-price .off-price {
+  color: red;
+  font-weight: 600;
+}
+.product-detail__description-emi {
+  border-bottom: 1px solid rgba(183, 186, 252, 0.7176470588);
+}
+.product-detail__description-emi p {
+  color: rgba(0, 0, 0, 0.6862745098);
+  font-size: 18px;
+}
+.product-detail__description-emi p span {
+  font-weight: 600;
+  color: #000;
+}
+.product-detail__description-color {
+  display: flex;
+  gap: 10px;
+}
+.product-detail__description-color p {
+  font-weight: 600;
+}
+.product-detail__description-color > div {
+  cursor: pointer;
+}
+.product-detail__description-color .blue {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: blue;
+  border: 3px solid #000;
+}
+.product-detail__description-color .green {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: green;
+  border: 3px solid #000;
+}
+.product-detail__description-color .gray {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: gray;
+  border: 3px solid #000;
+}
+.product-detail__description-qty input[type=number] {
+  outline: none;
+  border: none;
+  background-color: rgba(128, 128, 128, 0.2901960784);
+  width: 80px;
+  padding: 10px;
+}
+.product-detail__description-trust-element {
+  display: flex;
+  padding: 10px;
+  border-top: 1px solid rgba(183, 186, 252, 0.7176470588);
+  border-bottom: 1px solid rgba(183, 186, 252, 0.7176470588);
+}
+.product-detail__description-trust-element .element {
+  display: flex;
+  flex: 1;
+  align-items: center;
+}
+.product-detail__description-trust-element .element p {
+  color: #4c4cef;
+  font-size: 12px;
+  font-weight: 600;
+}
+.product-detail__description-trust-element .element img {
+  width: 42px;
+}
+.product-detail__description-cta {
+  display: flex;
+  gap: 20px;
+}
+.product-detail__description-cta button {
+  padding: 15px 25px;
+  font-size: 15px;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  border-radius: 50px;
+  background-color: transparent;
+  cursor: pointer;
+}
+.product-detail__description-cta .add-to-cart {
+  background-color: yellow;
+  color: rgba(0, 0, 0, 0.7176470588);
+  transition: all 0.3s ease;
+}
+.product-detail__description-cta .add-to-cart:hover {
+  background-color: orange;
+}
+.product-detail__description-cta .buy-now {
+  color: rgba(0, 0, 0, 0.7176470588);
+  background-color: orange;
+  transition: all 0.3s ease;
+}
+.product-detail__description-cta .buy-now:hover {
+  background-color: #ff3700;
+}
+
+.detailed-description {
+  margin: 20px;
+  display: flex;
+}
+.detailed-description__about-item {
+  width: 50%;
+}
+.detailed-description__about-item--title h4 {
+  font-size: 20px;
+  font-weight: 600;
+}
+.detailed-description__about-item--content {
+  padding: 25px;
+}
+.detailed-description__item-review {
+  width: 50%;
+}
+.detailed-description__item-review--title h4 {
+  font-size: 20px;
+  font-weight: 600;
+}
+.detailed-description__item-review--cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 20px;
+}
+.detailed-description__item-review--card {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex-shrink: 0;
+}
+.detailed-description__item-review--card-name {
+  font-size: 15px;
+}
+.detailed-description__item-review--card-name p {
+  font-weight: 600;
+}
+.detailed-description__item-review--card-name p i {
+  padding-right: 5px;
+}
+.detailed-description__item-review--card-rating p i {
+  color: gold;
+}
+.detailed-description__item-review--card-content p {
+  color: rgba(0, 0, 0, 0.5490196078);
+}
+.detailed-description__item-review--card-like-dislike {
+  margin-top: 5px;
+}
+.detailed-description__item-review--card-like-dislike p {
+  display: flex;
+  gap: 20px;
+}
+.detailed-description__item-review--card-like-dislike p i {
+  font-size: 18px;
+  cursor: pointer;
 }
 
 @media (max-width: 1024px) {
@@ -874,6 +1126,24 @@
   }
   .product-listing__container-header-filter-open {
     display: block;
+  }
+  .product-detail {
+    flex-direction: column;
+  }
+  .product-detail__display {
+    width: 100%;
+  }
+  .product-detail__description {
+    width: 100%;
+  }
+  .detailed-description {
+    flex-direction: column;
+  }
+  .detailed-description__about-item {
+    width: 100%;
+  }
+  .detailed-description__item-review {
+    width: 100%;
   }
 }
 @media (max-width: 480px) {
