--- a/css/style.scss
+++ b/css/style.scss
@@ -211,7 +211,6 @@
     display: flex;
     width: 50%;
     height: 100%;
-    background-color: yellow;
     img {
       width: 100%;
       height: 100%;
@@ -242,11 +241,17 @@
         border-radius: 5px;
         background: transparent;
         transition: all 0.3s ease;
+        a {
+          text-decoration: none;
+          color: #000;
+        }
       }
       button:hover {
         background-color: #000000;
-        color: #fff;
-        cursor: pointer;
+        a {
+          color: #fff;
+          cursor: pointer;
+        }
       }
     }
   }
@@ -298,11 +303,17 @@
         border-radius: 5px;
         background: transparent;
         transition: all 0.3s ease;
+        a {
+          text-decoration: none;
+          color: #000;
+        }
       }
       button:hover {
         background-color: #000000;
-        color: #fff;
-        cursor: pointer;
+        a {
+          color: #fff;
+          cursor: pointer;
+        }
       }
     }
   }
@@ -346,8 +357,12 @@
         border: 3px solid #ffffff6d;
         border-radius: 5px;
         background: transparent;
-        color: #fff;
+
         transition: all 0.3s ease;
+        a {
+          text-decoration: none;
+          color: #fff;
+        }
       }
       button:hover {
         background-color: #000000;
@@ -435,7 +450,11 @@
     // &-details {
     // }
     &-title {
-      font-weight: 500;
+      a {
+        text-decoration: none;
+        color: #000;
+        font-weight: 600;
+      }
     }
     &-price {
       display: flex;
@@ -746,6 +765,12 @@
     }
     &-title {
       font-size: 16px;
+      h4 {
+        a {
+          text-decoration: none;
+          color: #000;
+        }
+      }
     }
     &-rating {
       p {
@@ -826,6 +851,264 @@
 }
 // PRODUCTS LISTING end
 // --------------------------------LISTING end----------------------
+
+// --------------------------------PRODUCT DETAIL start----------------------
+
+.breadcrumb {
+  display: flex;
+  margin: 10px;
+  ul {
+    display: flex;
+    li {
+      font-size: 12px;
+      color: #00000097;
+      list-style: none;
+    }
+    li + li::before {
+      content: ">";
+      margin: 10px;
+    }
+  }
+}
+
+.product-detail {
+  display: flex;
+  width: 100%;
+  padding: 20px;
+  &__display {
+    width: 50%;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  &__description {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 50%;
+    &-title {
+      h2 {
+        font-size: 20px;
+        font-weight: 500;
+      }
+    }
+    &-rating {
+      border-bottom: 1px solid #b7bafcb7;
+      p {
+        color: #000000a2;
+        i {
+          color: gold;
+        }
+      }
+    }
+    &-limited-deal {
+      p {
+        display: inline-block;
+        font-size: 12px;
+        font-weight: 500;
+        background-color: red;
+        color: #fff;
+        padding: 5px 10px;
+      }
+    }
+    &-price {
+      display: flex;
+      gap: 10px;
+      font-size: 25px;
+      .original-price {
+        font-style: italic;
+        text-decoration: line-through;
+        color: #000000a1;
+      }
+      .selling-price {
+        font-weight: 600;
+      }
+      .off-price {
+        color: red;
+        font-weight: 600;
+      }
+    }
+    &-emi {
+      border-bottom: 1px solid #b7bafcb7;
+      p {
+        color: #000000af;
+        font-size: 18px;
+        span {
+          font-weight: 600;
+          color: #000;
+        }
+      }
+    }
+    &-color {
+      display: flex;
+      gap: 10px;
+      p {
+        font-weight: 600;
+      }
+      > div {
+        cursor: pointer;
+      }
+      .blue {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background-color: blue;
+        border: 3px solid #000;
+      }
+      .green {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background-color: green;
+        border: 3px solid #000;
+      }
+      .gray {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background-color: gray;
+        border: 3px solid #000;
+      }
+    }
+    &-qty {
+      input[type="number"] {
+        outline: none;
+        border: none;
+        background-color: #8080804a;
+        width: 80px;
+        padding: 10px;
+      }
+    }
+    &-trust-element {
+      display: flex;
+      padding: 10px;
+      // background-color: #b7bafc4d;
+      border-top: 1px solid #b7bafcb7;
+      border-bottom: 1px solid #b7bafcb7;
+      .element {
+        display: flex;
+        flex: 1;
+        align-items: center;
+        p {
+          color: #4c4cef;
+          font-size: 12px;
+          font-weight: 600;
+        }
+        img {
+          width: 42px;
+        }
+      }
+    }
+    &-cta {
+      display: flex;
+      gap: 20px;
+      button {
+        padding: 15px 25px;
+        font-size: 15px;
+        outline: none;
+        border: none;
+        font-weight: 500;
+        border-radius: 50px;
+        background-color: transparent;
+        cursor: pointer;
+      }
+      .add-to-cart {
+        background-color: yellow;
+        color: #000000b7;
+        transition: all 0.3s ease;
+      }
+      .add-to-cart:hover {
+        background-color: orange;
+      }
+      .buy-now {
+        color: #000000b7;
+        background-color: orange;
+        transition: all 0.3s ease;
+      }
+      .buy-now:hover {
+        background-color: #ff3700;
+      }
+    }
+  }
+}
+
+//DETAILED DESCRIPTION start
+
+.detailed-description {
+  margin: 20px;
+  display: flex;
+  // flex-direction: column;
+  &__about-item {
+    width: 50%;
+    &--title {
+      h4 {
+        font-size: 20px;
+        font-weight: 600;
+      }
+    }
+    &--content {
+      padding: 25px;
+    }
+  }
+  &__item-review {
+    width: 50%;
+    &--title {
+      h4 {
+        font-size: 20px;
+        font-weight: 600;
+      }
+    }
+    &--cards {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      padding: 20px;
+    }
+    &--card {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      flex-shrink: 0;
+      &-name {
+        font-size: 15px;
+        p {
+          font-weight: 600;
+          i {
+            padding-right: 5px;
+          }
+        }
+      }
+      &-rating {
+        p {
+          i {
+            color: gold;
+          }
+        }
+      }
+      &-content {
+        p {
+          color: #0000008c;
+        }
+      }
+      &-like-dislike {
+        margin-top: 5px;
+        p {
+          display: flex;
+          gap: 20px;
+          i {
+            font-size: 18px;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+}
+
+//DETAILED DESCRIPTION end
+
+// --------------------------------PRODUCT DETAIL end----------------------
 
 // RESPONSIVE TABLET start
 
@@ -1017,6 +1300,38 @@
   //PRODUCTS end
 
   // --------------------------------LISTING end----------------------
+
+  // --------------------------------PRODUCT DETAIL start----------------------
+
+  // PRODUCT DETAIL start
+
+  .product-detail {
+    flex-direction: column;
+    &__display {
+      width: 100%;
+    }
+    &__description {
+      width: 100%;
+    }
+  }
+
+  // PRODUCT DETAIL end
+
+  // PRODUCT DETAILED DESCRIPTION start
+
+  .detailed-description {
+    flex-direction: column;
+    &__about-item {
+      width: 100%;
+    }
+    &__item-review {
+      width: 100%;
+    }
+  }
+
+  // PRODUCT DETAILED DESCRIPTION end
+
+  // --------------------------------PRODUCT DETAIL end----------------------
 }
 
 // RESPPONSIVE TABLET end
